k8s/02-mutli-apps/nginx-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
 name: nginx-app 
spec: 
 replicas: 1 
 selector: 
  matchLabels: 
   app: nginx-app 
 template: 
  metadata: 
   labels: 
    app: nginx-app
  spec: 
   containers:
   - name: nginx 
     image: nginx:latest 
     ports: 
     - containerPort: 80
