k8s/02-mutli-apps/aspnet-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: aspnet-service 
spec: 
 selector: 
  app: aspnet-app 
 ports:
 - protocol: TCP 
   port: 80 
   targetPort: 8080 
 type: ClusterIP
