k8s/02-mutli-apps/nginx-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: nginx-service 
spec: 
 selector: 
  app: nginx-app 
 ports:
 - protocol: TCP 
   port: 80 
   targetPort: 80 
 type: ClusterIP
